--- a/docs/man/tut.5
+++ b/docs/man/tut.5
@@ -73,14 +73,14 @@ See https://pkg.go.dev/time#pkg-constants
 .P
 .PD
 \f[B]date-format\f[R]=\f[I]\[lq]2006-01-02 15:04\[rq]\f[R]
-.SS date-tody-format
+.SS date-today-format
 .PP
 Format for dates the same day.
 See date-format for more info.
 .PD 0
 .P
 .PD
-\f[B]date-tody-format\f[R]=\f[I]\[lq]15:04\[rq]\f[R]
+\f[B]date-today-format\f[R]=\f[I]\[lq]15:04\[rq]\f[R]
 .SS date-relative
 .PP
 This displays relative dates instead for statuses that are one day or
