minor typo fixes

--- a/docs/man/tut.7
+++ b/docs/man/tut.7
@@ -136,7 +136,7 @@ List of people the account are following.
 It only works on profiles
 .TP
 \f[B]:following\f[R]
-List of people follwing the account.
+List of people following the account.
 It only works on profiles
 .TP
 \f[B]:help\f[R]
